# replicated-log

./: .env.example  .gitignore  README.md  append_project_name.sh  docker-compose.yml
master/: .env.example  Dockerfile  main.py  master-statefulset.yaml  pyproject.toml
secondary/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  secondary-statefulset.yaml
